--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1,6 +1,24 @@
 body {
+  font: Monserrat;
   background-color: #272640;
   color: white;
+}
+
+body nav ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+body > main > thead {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background: linear-gradient(blue, pink);
+  width: 100%;
+}
+section {
+  height: 40vh;
+  width: 40vw;
 }
 
 /*# sourceMappingURL=style.css.map */
