--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1,24 +1,37 @@
 body {
-  font: Monserrat;
-  background-color: #272640;
+  font-family: "Montserrat";
+  background: linear-gradient(#1c384a, #212e44, #481a4b, #1c384a, #212e44, #481a4b, #1c384a, #212e44, #481a4b);
   color: white;
 }
 
-body nav ul {
+body header nav ul, body footer nav ul {
   list-style-type: none;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-body > main > thead {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  background: linear-gradient(blue, pink);
-  width: 100%;
+body header nav ul a, body footer nav ul a {
+  text-decoration: none;
+  color: white;
+  text-align: center;
 }
-section {
-  height: 40vh;
-  width: 40vw;
+
+h1, h2, h3, h4 {
+  text-align: center;
+}
+
+body > header > img {
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body > main .tbody > img {
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
