--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -1,33 +1,64 @@
+@import "vars";
+
 body {
-    font: Monserrat;
-    background-color:#272640;
+    font-family: 'Montserrat';
+    background: linear-gradient(#1c384a, #212e44, #481a4b,#1c384a, #212e44, #481a4b, #1c384a, #212e44, #481a4b);
     color:white;
 }
 
 body {
-    nav {
-        ul {
-            list-style-type: none;
-            display:grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr;
+    header, footer {
+        nav {
+            ul {
+                list-style-type: none;
+                display:grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+            }
         }
     }
 }
 
 body {
-    &>header {}
-        &>main {
-            &>thead {
-                display:grid;
-                grid-template-columns: 1fr 1fr 1fr;
-                background: linear-gradient(blue, pink);
-                width:100%;
+    header, footer {
+        nav {
+            ul {
+                a {
+                    text-decoration:none;
+                    color:white;
+                    text-align:center;
+                }
+            }
         }
     }
-    &>footer {}
 }
 
-section {
-    height:40vh;
-    width:40vw;
+
+h1, h2, h3, h4 {
+    text-align:center;
 }
+
+body {
+    &>header {
+        &>img {
+              width: 200px;
+              display: block;
+              margin-left: auto;
+              margin-right: auto;
+        }
+    }
+}
+
+
+body {
+    &>main {
+        .tbody {
+            &>img {
+              width: 200px;
+              display: block;
+              margin-left: auto;
+              margin-right: auto;
+            }
+        }
+    }
+}
+
